Subo cambios de ejercicio bootstrap

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/></head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
   <body>
     <h1></h1>
@@ -16,36 +16,36 @@
   <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <img src="images/Grupo.png" id="d1" style="position: absolute; z-index: 1;" class="animate__animated animate__backInLeft">
-            <img src="images/Grupo 3.png" id="d2" style="position: absolute; z-index: 2;" class="animate__animated animate__backInUp">
-            <img src="images/Grupo 2.png" id="d3" style="position: absolute; z-index: 3;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Trazo.png" id="d4" style="position: absolute; z-index: 4;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Trazo 2.png" id="d5" style="position: absolute; z-index: 5;" class="animate__animated animate__jackInTheBox" >
-            <img src="images/trazo 3.png" id="d1" style="position: absolute; z-index: 1;" class="animate__animated animate__backInLeft">
-            <img src="images/trazo 4.png" id="d2" style="position: absolute; z-index: 2;" class="animate__animated animate__backInUp">
-            <img src="images/Rectangulo.png" id="d3" style="position: absolute; z-index: 3;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Rectangulo 2.png" id="d4" style="position: absolute; z-index: 4;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Rectangulo 3.png" id="d5" style="position: absolute; z-index: 5;" class="animate__animated animate__jackInTheBox" >
-            <img src="images/Rectangulo 4.png" id="d1" style="position: absolute; z-index: 1;" class="animate__animated animate__backInLeft">
-            <img src="images/Rectangulo 5.png" id="d2" style="position: absolute; z-index: 2;" class="animate__animated animate__backInUp">
-            <img src="images/Rectangulo 6.png" id="d3" style="position: absolute; z-index: 3;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Naranja.png" id="d4" style="position: absolute; z-index: 4;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Naranja 2.png" id="d5" style="position: absolute; z-index: 5;" class="animate__animated animate__jackInTheBox" >
             <img src="images/Linea.png" id="d1" style="position: absolute; z-index: 1;" class="animate__animated animate__backInLeft">
-            <img src="images/Linea 2.png" id="d2" style="position: absolute; z-index: 2;" class="animate__animated animate__backInUp">
-            <img src="images/Punto.png" id="d3" style="position: absolute; z-index: 3;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Punto 2.png" id="d4" style="position: absolute; z-index: 4;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Punto 3.png" id="d5" style="position: absolute; z-index: 5;" class="animate__animated animate__jackInTheBox" >
-            <img src="images/Rojo.png" id="d1" style="position: absolute; z-index: 1;" class="animate__animated animate__backInLeft">
-            <img src="images/Rojo 2.png" id="d2" style="position: absolute; z-index: 2;" class="animate__animated animate__backInUp">
-            <img src="images/Rojo 3.png" id="d3" style="position: absolute; z-index: 3;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Rojo 4.png" id="d4" style="position: absolute; z-index: 4;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/A.png" id="d5" style="position: absolute; z-index: 5;" class="animate__animated animate__jackInTheBox" >
-            <img src="images/Z.png" id="d1" style="position: absolute; z-index: 1;" class="animate__animated animate__backInLeft">
-            <img src="images/Azul.png" id="d2" style="position: absolute; z-index: 2;" class="animate__animated animate__backInUp">
-            <img src="images/Zalomon Ascencio.png" id="d3" style="position: absolute; z-index: 3;" class="animate__animated animate__lightSpeedInRight" >
-            <img src="images/Media Producer.png" id="d4" style="position: absolute; z-index: 4;" class="animate__animated animate__lightSpeedInRight" >
+            <img src=" images/Linea 2.png" id="d2" style="position: absolute; z-index: 2;" class="animate__animated animate__backInUp">
+            <img src="images/trazo 3.png" id="d3" style="position: absolute; z-index: 3;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Trazo 4.png" id="d4" style="position: absolute; z-index: 4;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Trazo.png" id="d5" style="position: absolute; z-index: 5;" class="animate__animated animate__jackInTheBox" >
+            <img src="images/trazo 3.png" id="d6" style="position: absolute; z-index: 6;" class="animate__animated animate__backInLeft">
+            <img src="images/trazo 4.png" id="d7" style="position: absolute; z-index: 7;" class="animate__animated animate__backInUp">
+            <img src="images/Rectangulo.png" id="d8" style="position: absolute; z-index: 8;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Rectangulo 2.png" id="d9" style="position: absolute; z-index: 9;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Rectangulo 3.png" id="d10" style="position: absolute; z-index: 10;" class="animate__animated animate__jackInTheBox" >
+            <img src="images/Rectangulo 4.png" id="d11" style="position: absolute; z-index: 11;" class="animate__animated animate__backInLeft">
+            <img src="images/Rectangulo 5.png" id="d12" style="position: absolute; z-index: 12;" class="animate__animated animate__backInUp">
+            <img src="images/Rectangulo 6.png" id="d13" style="position: absolute; z-index: 13;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Naranja.png" id="d14" style="position: absolute; z-index: 14;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Naranja 2.png" id="d15" style="position: absolute; z-index: 15;" class="animate__animated animate__jackInTheBox" >
+            <img src="images/Linea.png" id="d16" style="position: absolute; z-index: 16;" class="animate__animated animate__backInLeft">
+            <img src="images/Linea 2.png" id="d17" style="position: absolute; z-index: 17;" class="animate__animated animate__backInUp">
+            <img src="images/Punto.png" id="d18" style="position: absolute; z-index: 18;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Punto 2.png" id="d19" style="position: absolute; z-index: 19;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Punto 3.png" id="d20" style="position: absolute; z-index: 20;" class="animate__animated animate__jackInTheBox" >
+            <img src="images/Rojo.png" id="d21" style="position: absolute; z-index: 21;" class="animate__animated animate__backInLeft">
+            <img src="images/Rojo 2.png" id="d22" style="position: absolute; z-index: 2;" class="animate__animated animate__backInUp">
+            <img src="images/Rojo 3.png" id="d23" style="position: absolute; z-index: 23;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Rojo 4.png" id="d24" style="position: absolute; z-index: 24;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Z.png" id="d25" style="position: absolute; z-index: 25;" class="animate__animated animate__jackInTheBox" >
+            <img src="images/A.png" id="d26" style="position: absolute; z-index: 26;" class="animate__animated animate__backInLeft">
+            <img src="images/Azul.png" id="d27" style="position: absolute; z-index: 27;" class="animate__animated animate__backInUp">
+            <img src="images/Zalomon Ascencio.png" id="d28" style="position: absolute; z-index: 28;" class="animate__animated animate__lightSpeedInRight" >
+            <img src="images/Media Producer.png" id="d29" style="position: absolute; z-index: 29;" class="animate__animated animate__lightSpeedInRight" >
         </div>
     </div>
   </div>
-</html>
+</html>    
